<resources>
    <string name="app_name">Happy Places</string>
    <string name="fab_content_desc">Plus Floating Button</string>
    <string name="create_happy_place_title">Create Happy Place</string>
    <string name="content_description_end_icon_title">End title icon</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="content_description_end_icon_description">description icon</string>
    <string name="date">Date</string>
    <string name="content_description_end_icon_date">Date end icon</string>
    <string name="location">Location</string>
    <string name="content_description_end_icon_location">location end icon</string>
    <string name="save">Save</string>
    <string name="add_image">Add Image</string>
    <string name="image_description">image description</string>
    <string name="select_date">Select Date</string>
    <string name="place">place</string>
    <string name="default_title">This is a title</string>
    <string name="default_description">This is a description</string>
    <string name="no_happy_place_available">No happy place available</string>
    <string name="toolbar_image">toolbar image</string>
    <string name="details_image">details image</string>
    <string name="update">Update</string>
    <string name="select_photo_form_gallery">Select photo form Gallery</string>
    <string name="capture_photo_from_camera">Capture photo from Camera</string>
    <string name="select_action">Select Action</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="take_picture">Take Picture</string>
    <string name="cancel">Cancel</string>
    <string name="edit_happy_place">Edit Happy Place</string>
    <string name="google_maps_api_key">AIzaSyA1gBofhtSXX1W9yUqYAhg7QJrPWj-ObWg</string>
    <string name="view_on_map">View on Map</string>
    <string name="select_current_location">Select current location</string>
    <string name="current_location">Current location</string>
</resources>